--- a/app/src/main/res/layout/fragment_change_pass.xml
+++ b/app/src/main/res/layout/fragment_change_pass.xml
@@ -140,7 +140,7 @@
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/nova_round"
+        android:fontFamily="@font/merriweather_sans_light"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
         android:text="Reset Password"
