--- a/app/src/main/res/drawable/login_upper_poly.xml
+++ b/app/src/main/res/drawable/login_upper_poly.xml
@@ -1,5 +1,6 @@
 <vector android:height="39dp" android:viewportHeight="552.612"
-    android:viewportWidth="315.968" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:viewportWidth="315.968" android:width="24dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#fff" android:pathData="M296.005,0
     c19.96,0 19.968,1.515 19.963,25.327 L315.968,520.211 c-1,32.972 0,37.8 -29.342,26.18
     L23.914,427.883 c-22.541,-12.052 -23.368,-12.052 -23.914,-44.8 L0,25.325
