--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -8,44 +8,126 @@
     tools:context=".fragments.OTPDialogFragment"
     android:elevation="2dp"
     tools:targetApi="lollipop"
+    android:background="@color/colorWhite"
     android:clickable="true"
     android:focusable="true">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="1"
-        android:src="@drawable/background_otp"/>
-
     <TextView
         android:id="@+id/verifyotp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
         android:padding="8dp"
-        android:paddingBottom="10dp"
-        android:text="@string/otp"
+        android:text="@string/otp_verification"
         android:textAlignment="center"
-        android:textColor="@color/colorWhite"
         android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/otp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/otp_guide_detail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <RelativeLayout
-        android:id="@+id/otp"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/otp_guide_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.15"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        app:layout_constraintBottom_toTopOf="@+id/number_pad"
-        app:layout_constraintTop_toBottomOf="@+id/verifyotp">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@id/otp_guide_top"
+        app:layout_constraintTop_toBottomOf="@id/otp_guide_detail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <com.google.android.material.card.MaterialCardView
+        <TextView
+            android:id="@+id/otp_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_centerHorizontal="true"
-            app:cardCornerRadius="35dp"
-            app:cardElevation="3dp">
+            android:text="An OTP has been sent on the Registered Mobile Number. Please enter the OTP"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"/>
+
+        <LinearLayout
+            android:id="@+id/otp_mobile_number_layout"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp">
+
+            <androidx.cardview.widget.CardView
+                android:orientation="horizontal"
+                app:cardCornerRadius="25dp"
+                android:elevation="10dp"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:id="@+id/otp_mobile_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0123456789"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:textAlignment="center"
+                    android:textSize="25sp"
+                    android:padding="5dp"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:id="@+id/otp_edit_number"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="20dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingEnd="10dp"
+                    android:paddingStart="10dp"
+                    app:srcCompat="@drawable/ic_pencil"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:text="Edit"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/otp_guide_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.45"/>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/otp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        app:cardCornerRadius="35dp"
+        android:layout_margin="10dp"
+        app:cardBackgroundColor="#FFAB8C"
+        app:cardElevation="3dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/otp_guide_top"
+        app:layout_constraintBottom_toTopOf="@id/otp_guide">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -103,38 +185,44 @@
                 android:textSize="24sp" />
         </LinearLayout>
 
-        </com.google.android.material.card.MaterialCardView>
-
-    </RelativeLayout>
+    </com.google.android.material.card.MaterialCardView>
 
     <TextView
         android:id="@+id/resend_otp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
+        android:layout_marginTop="10dp"
         android:padding="4dp"
         android:text="@string/resend_otp"
         android:focusable="true"
         android:clickable="true"
         android:textSize="18sp"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/black"
         android:textStyle="italic"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/otp"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <RelativeLayout
-        android:id="@+id/number_pad"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/otp_guide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.6"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toTopOf="@id/otp_recycler"
+        android:background="#40000000"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/otp_recycler"
+        android:overScrollMode="never"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/otp">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/otp_recycler"
-            android:overScrollMode="never"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </RelativeLayout>
+        app:layout_constraintTop_toBottomOf="@+id/otp_guide"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
