--- a/app/src/main/res/layout/layout_event_register.xml
+++ b/app/src/main/res/layout/layout_event_register.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -11,12 +11,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
-        android:layout_margin="30dp"
         android:layout_gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/event_register_button">
+        app:layout_constraintBottom_toTopOf="@+id/event_register_guide_70">
 
         <TextView
             android:id="@+id/event_date"
@@ -53,6 +52,7 @@
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto"
                 android:layout_gravity="center"
+                android:textAlignment="center"
                 android:text="Venue: "
                 android:textColor="@color/black"
                 android:textSize="18sp" />
@@ -61,6 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
+                android:layout_gravity="center"
                 app:srcCompat="@drawable/ic_venue" />
 
             <TextView
@@ -79,19 +80,24 @@
 
     </LinearLayout>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/event_register_guide_70"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".5"/>
+
     <Button
         android:id="@+id/event_register_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/event_register_bg"
-        android:clickable="true"
-        android:focusable="true"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:text="Register"
         android:textColor="@color/colorWhite"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/venue_layout"
+        app:layout_constraintTop_toBottomOf="@+id/event_register_guide_70"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
