--- a/app/src/main/res/layout/layout_hamburgeritem.xml
+++ b/app/src/main/res/layout/layout_hamburgeritem.xml
@@ -5,21 +5,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="16dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
+        android:padding="14dp"
         android:paddingBottom="2dp">
 
         <ImageView
             android:id="@+id/hamburger_itemicon"
             android:layout_width="32dp"
             android:layout_height="32dp"
+            android:layout_gravity="center"
             app:srcCompat="@drawable/ic_username"/>
 
         <TextView
@@ -31,6 +30,7 @@
             android:fontFamily="@font/roboto"
             android:paddingStart="24dp"
             android:paddingEnd="16dp" />
+
     </LinearLayout>
 
     <ImageView
