4 diff ECell Logos added, Sponsors and Team Images Changed, Contact Us Mail edited, Error Messages Edited

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -279,6 +279,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="First Name"
+                    android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM "
                     android:inputType="textPersonName|textCapWords"
                     android:nextFocusDown="@id/register_last_name"
                     android:singleLine="true"
@@ -299,6 +300,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Last Name"
+                    android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM "
                     android:inputType="textPersonName|textCapWords"
                     android:nextFocusDown="@id/register_email"
                     android:singleLine="true"
