--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -22,6 +22,7 @@
                 app:cardCornerRadius="20dp"
                 android:layout_margin="8dp"
                 app:cardElevation="5dp">
+
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -57,6 +58,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/name_college"
                         android:textSize="18sp"
+                        android:maxLines="3"
                         android:textColor="@color/aboutUsHeading"
                         android:textAlignment="gravity"
                         android:layout_marginStart="8dp"
