--- a/app/src/main/res/layout/layout_card_sponsors.xml
+++ b/app/src/main/res/layout/layout_card_sponsors.xml
@@ -5,10 +5,7 @@
     android:id="@+id/spons_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginStart="15dp"
-    android:layout_marginEnd="15dp"
-    android:layout_marginBottom="5dp"
+    android:layout_margin="15dp"
     android:background="@color/colorPrimaryDark"
     app:cardBackgroundColor="@color/black_overlay"
     app:cardCornerRadius="7dp"
@@ -23,7 +20,7 @@
         <com.nitrr.ecell.esummit.ecellapp.misc.SquareImageView
             android:id="@+id/spons_img"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"/>
 
         <TextView
@@ -31,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="4dp"
-            android:maxLines="2"
+            android:lines="2"
             android:ellipsize="end"
             android:textAllCaps="true"
             android:textAlignment="center"
