--- a/app/src/main/res/layout/layout_element_team.xml
+++ b/app/src/main/res/layout/layout_element_team.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="4dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/team_member_backround"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp">
+            android:padding="10dp">
 
-            <ImageView
+            <com.nitrr.ecell.esummit.ecellapp.misc.SquareImageView
                 android:id="@+id/memberpic"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp" />
@@ -29,17 +30,17 @@
                 android:id="@+id/membername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginStart="5dp"
+                android:layout_gravity="center"
+                android:padding="5dp"
                 android:gravity="center"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@string/name"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/black"
                 android:textSize="16sp" />
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
