--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:myapp="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparent"
@@ -55,20 +56,24 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
 
-    <com.nitrr.ecell.esummit.ecellapp.misc.SquareImageView
-        android:id="@+id/event_img"
-        android:layout_width="150dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-
-        android:layout_margin="10dp"
-        android:background="@color/black_overlay"
-        android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@id/event_detail_guide"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/event_image_guide"
-        app:srcCompat="@drawable/ic_event_bq" />
+        android:background="@color/black_overlay">
+
+        <com.nitrr.ecell.esummit.ecellapp.misc.SquareImageView
+            android:id="@+id/event_img"
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            myapp:heightSquare="true" />
+
+    </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
