--- a/app/src/main/res/layout/layout_event_register.xml
+++ b/app/src/main/res/layout/layout_event_register.xml
@@ -78,6 +78,17 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/event_registrations"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/roboto"
+            android:layout_gravity="center"
+            android:lines="1"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
@@ -85,7 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".5"/>
+        app:layout_constraintGuide_percent=".65"/>
 
     <Button
         android:id="@+id/event_register_button"
