--- a/app/src/main/res/layout/leaderboard_item.xml
+++ b/app/src/main/res/layout/leaderboard_item.xml
@@ -27,6 +27,7 @@
                 android:layout_margin="8dp"
                 android:layout_weight="1"
                 android:text="Score"
+                android:maxLines="1"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
 
@@ -37,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="Name"
+                android:paddingRight="5dp"
                 android:textAlignment="viewEnd"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
