--- a/app/src/main/res/layout/layout_event_details.xml
+++ b/app/src/main/res/layout/layout_event_details.xml
@@ -3,21 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="4dp">
+    app:cardElevation="0dp">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:overScrollMode="never">
 
         <TextView
             android:id="@+id/event_text"
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
     </ScrollView>
 </androidx.cardview.widget.CardView>
