--- a/app/src/main/res/layout/layout_event_register.xml
+++ b/app/src/main/res/layout/layout_event_register.xml
@@ -27,7 +27,7 @@
             android:lines="1"
             android:text="Date: 2019-07-29"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/event_time"
@@ -39,7 +39,7 @@
             android:lines="1"
             android:text="Time: 10:00am"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -49,18 +49,19 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
                 android:layout_gravity="center"
                 android:textAlignment="center"
                 android:text="Venue: "
+                android:textStyle="bold"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
+                android:layout_margin="5dp"
                 android:layout_gravity="center"
                 app:srcCompat="@drawable/ic_venue" />
 
@@ -74,7 +75,7 @@
                 android:text="TBD"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -87,7 +88,7 @@
             android:layout_gravity="center"
             android:lines="1"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 
@@ -107,7 +108,7 @@
         android:paddingEnd="20dp"
         android:text="Register"
         android:textColor="@color/colorWhite"
-        android:textSize="18sp"
+        android:textSize="17sp"
         app:layout_constraintTop_toBottomOf="@+id/event_register_guide_70"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
