--- a/app/src/main/res/layout/layout_event_details.xml
+++ b/app/src/main/res/layout/layout_event_details.xml
@@ -19,5 +19,16 @@
             android:textColor="@color/black"
             android:textSize="16sp" />
 
+        <TextView
+            android:id="@+id/event_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/read_more"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif-condensed"
+            android:linksClickable="true"
+            android:focusable="true"
+            android:clickable="true" />
+
     </ScrollView>
 </androidx.cardview.widget.CardView>
