--- a/app/src/main/res/layout/fragment_speaker_detail.xml
+++ b/app/src/main/res/layout/fragment_speaker_detail.xml
@@ -61,49 +61,39 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="6dp"
-        app:layout_constraintBottom_toTopOf="@id/detail_speaker_name_guide"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/detail_speaker_image_guide" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/detail_speaker_name_guide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.37" />
-
-    <TextView
-        android:id="@+id/detail_speaker_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/tint"
-        android:textSize="35sp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:text="Speaker Name"
         app:layout_constraintBottom_toTopOf="@id/detail_speaker_guide"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detail_speaker_name_guide" />
+        app:layout_constraintTop_toBottomOf="@id/detail_speaker_image_guide" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/detail_speaker_guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.37" />
 
     <LinearLayout
         android:id="@+id/speaker_work_profile"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/detail_speaker_guide"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/detail_speaker_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/tint"
+            android:textSize="35sp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:layout_margin="5dp"
+            android:layout_gravity="center"
+            android:text="Speaker Name"/>
 
         <TextView
             android:id="@+id/speaker_company"
@@ -111,8 +101,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Work Profile"
+            android:layout_margin="5dp"
+            android:layout_gravity="center"
             android:textAlignment="center"
             android:textColor="@color/tint" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/speaker_social_media"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_margin="5dp"
+            android:fontFamily="@font/roboto"
+            android:text="Follow"
+            android:textAppearance="@style/Widget.MaterialComponents.Button"
+            android:textColor="@color/colorWhite"
+            android:textSize="16sp"
+            app:cornerRadius="30dp"
+            app:rippleColor="#5d65ff" />
 
     </LinearLayout>
 
@@ -139,25 +147,7 @@
                 android:layout_margin="10dp"
                 android:textSize="16sp"
                 android:textColor="@color/colorWhite"
-                app:layout_constraintTop_toBottomOf="@id/speaker_work_profile"
-                tools:targetApi="o" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/speaker_social_media"
-                style="@style/Widget.MaterialComponents.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/acme"
-                android:paddingStart="30dp"
-                android:paddingEnd="30dp"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:text="Follow"
-                android:textAppearance="@style/Widget.MaterialComponents.Button"
-                android:textColor="@color/colorWhite"
-                android:textSize="30sp"
-                app:cornerRadius="30dp"
-                app:rippleColor="#5d65ff" />
+                app:layout_constraintTop_toBottomOf="@id/speaker_work_profile" />
 
         </LinearLayout>
 
