--- a/app/src/main/res/layout/layout_card_sponsors.xml
+++ b/app/src/main/res/layout/layout_card_sponsors.xml
@@ -28,10 +28,9 @@
         <TextView
             android:id="@+id/spons_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:lines="2"
-            android:ellipsize="end"
+            android:lines="3"
             android:textAllCaps="true"
             android:textAlignment="center"
             android:text="SponsorA"
