--- a/app/src/main/res/layout/layout_event_details.xml
+++ b/app/src/main/res/layout/layout_event_details.xml
@@ -10,14 +10,35 @@
         android:layout_height="wrap_content"
         android:overScrollMode="never">
 
-        <TextView
-            android:id="@+id/event_text"
-            android:padding="5dp"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/event_text"
+                android:padding="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/event_url"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/read_more"
+                android:textSize="16sp"
+                android:layout_marginTop="10dp"
+                android:padding="5dp"
+                android:fontFamily="sans-serif-condensed"
+                android:linksClickable="true"
+                android:focusable="true"
+                android:clickable="true" />
+
+        </LinearLayout>
 
     </ScrollView>
+
 </androidx.cardview.widget.CardView>
