--- a/app/src/main/res/layout/layout_spons_alertdialog.xml
+++ b/app/src/main/res/layout/layout_spons_alertdialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -10,31 +11,46 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/text_spons"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_marginBottom="5dp"/>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:minHeight="40dp"
-        android:background="@drawable/img_text_background"
-        app:layout_constraintTop_toTopOf="@+id/_name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/text_spons"
-        android:textAllCaps="true"
-        android:textAlignment="center"
-        android:ellipsize="end"
-        android:textColor="@color/colorWhite"
-        android:maxLines="2"
-        android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:orientation="vertical"
+        android:background="@drawable/img_text_background">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/text_spons"
+            android:textAllCaps="true"
+            android:textAlignment="center"
+            android:ellipsize="end"
+            android:textColor="@color/colorWhite"
+            android:maxLines="3"
+            android:textSize="24sp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/border_white">
+
+            <TextView
+                android:id="@+id/_website"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/visit_website"
+                android:textColor="@color/colorWhite"
+                android:textAlignment="center"
+                android:padding="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+</LinearLayout>
